--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,12 @@
 @import url(__logo/header__logo.css);
+@import url(__lang-links-list/header__lang-links-list.css);
 @import url(__lang-link/header__lang-link.css);
+@import url(__lang-link/_active/header__lang-link_active.css);
 
 .header {
-
+  display: flex;
+  justify-content: space-between;
+  /*Я бы добавил отступ снизу, чтобы использовать шапку на всех страницах,
+  но это не по БЭМ*/
+  padding: 28px 48px 0;
 }
