--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,10 @@
-/*Шрифт видимо надо тоже импортировать сюда?*/
-@import url(./../fonts/Inter/inter.css);
+/* Vendor */
+@import url(../vendor/normalize.css);
+
+/* Font */
+@import url(../vendor/fonts/font.css);
+
+/* Blocks */
 @import url(./../blocks/page/page.css);
 @import url(./../blocks/hidden-text/hidden-text.css);
 @import url(./../blocks/header/header.css);
