Продолжаем работу по верстке

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,3 +4,10 @@
   /*Назначаем поведение блока чтобы ссылка корректно вмещала SVG*/
   display: block;
 }
+
+@media screen and (max-width: 375px) {
+  .header__logo {
+    width: 142px;
+    height: 42px;
+  }
+}
