--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,4 +6,16 @@
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: normal;
+  transition: opacity .2s linear;
+}
+
+.header__lang-link:hover {
+  opacity: .8;
+}
+
+@media screen and (max-width: 375px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
