--- a/blocks/lead/__figure/lead__figure.css
+++ b/blocks/lead/__figure/lead__figure.css
@@ -1,7 +1,28 @@
 .lead__figure {
+  position: relative;
   max-width: 984px;
   margin: 64px auto 0;
   /*Фиксируем высоту контента чтобы добиться совпадения с макетом*/
   font-size: 0;
   line-height: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__figure {
+    max-width: calc(100% - (48px * 2));
+    margin: 56px auto 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__figure {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .lead__figure {
+    max-width: 100%;
+    margin: 40px auto 0;
+  }
 }
