--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,3 +8,11 @@
   margin: 32px auto 0;
   max-width: 640px;
 }
+
+@media screen and (max-width: 680px) {
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    max-width: calc(100% - (16px * 2));
+  }
+}
