--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,3 +8,13 @@
   max-width: 720px;
   margin: auto;
 }
+
+@media screen and (max-width: 680px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    max-width: calc(100% - (16px * 2))
+  }
+}
+
+
