--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,5 @@
 @import url(./../blocks/hidden-text/hidden-text.css);
 @import url(./../blocks/header/header.css);
 @import url(./../blocks/lead/lead.css);
+@import url(./../blocks/intro/intro.css);
+@import url(./../blocks/photo-grid/photo-grid.css);
