--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,8 +5,17 @@
   max-width: 1184px;
   margin: 92px auto 0;
   display: grid;
-  /*grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));*/
+  /*
+  Интересно сделать автоматической сеткой, но не будет совпадать с макетом
+  grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
+  */
   grid-template-columns: repeat(4, 1fr);
+  /*
+  Отправлю на первое ревью без этого, мне так больше нравится, буду ждать коментария ревьюера
+  Если нам нужно совпадение сетки с макетом по высоте, то физически укажем высоту строк
+  хотя такое поведение сетки мне не очень нравится
+  grid-template-rows: repeat(3, 213px);
+  */
   grid-column-gap: 16px;
   grid-row-gap: 16px;
   width: calc(100% - 2 * 48px);
@@ -16,6 +25,10 @@
   .photo-grid {
     margin: 92px 48px 0;
     grid-template-columns: repeat(3, 1fr);
+    /* Если нам нужно совпадение сетки с макетом по высоте, то физически укажем высоту строк
+    хотя такое поведение сетки мне не очень нравится
+    grid-template-rows: repeat(4, 225px);
+    */
     width: auto;
     grid-column-gap: 14px;
     grid-row-gap: 14px;
@@ -26,6 +39,10 @@
   .photo-grid {
     margin: 88px 24px 0;
     grid-template-columns: repeat(2, 1fr);
+    /* Если нам нужно совпадение сетки с макетом по высоте, то физически укажем высоту строк
+    хотя такое поведение сетки мне не очень нравится
+    grid-template-rows: repeat(2, 264px);
+    */
     grid-column-gap: 16px;
     grid-row-gap: 16px;
   }
@@ -35,6 +52,10 @@
   .photo-grid {
     margin: 64px 16px 0;
     grid-template-columns: 1fr;
+    /* Если нам нужно совпадение сетки с макетом по высоте, то физически укажем высоту строк
+    хотя такое поведение сетки мне не очень нравится
+    grid-auto-rows: 216px;
+    */
     grid-column-gap: 12px;
     grid-row-gap: 12px;
   }
