--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,15 +1,14 @@
-.cover__overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #2A2C2F;
-  transition: opacity .3s linear;
-  opacity: 0.3;
-  top: 0;
-  left: 0;
-}
+/*.cover__overlay {*/
+/*  position: absolute;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  background: #2A2C2F;*/
+/*  transition: opacity .3s linear;*/
+/*  opacity: 0.3;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*}*/
 
-.cover__overlay:hover {
-  opacity: 0.8;
-
-}
+/*.cover__overlay:hover {*/
+/*  opacity: 0.8;*/
+/*}*/
