--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,7 @@
 @import url(./__text/intro__text.css);
 @import url(./__list/intro__list.css);
 @import url(./__list-item/intro__list-item.css);
+@import url(./__list-item-bold-text/intro__list-item-bold-text.css);
 
 .intro {
   max-width: 984px;
