--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,10 +1,7 @@
 .photo-grid__item {
   font-size: 0;
   line-height: 0;
-  display: inline-block;
-  transition: opacity .2s linear;
-}
-
-.photo-grid__item:hover {
-  opacity: .8;
+  max-width: 100%;
+  object-fit: cover;
+  height: 23vh;
 }
