Фиксы в соответствии с код-ревью

--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,4 +2,8 @@
   font-size: 0;
   line-height: 0;
   max-width: 100%;
+  /*Я бы использовал это свойство, но ревьюер не разрешил делать картинки ссылками
+  а порождать дополнительные блоки для грида я не вижу смысла*/
+  /*object-fit: cover;*/
+  /*height: 12vh;*/
 }
