Фиксы в соответствии с код-ревью

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -42,3 +42,10 @@
     grid-row-gap: 32px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .place {
+    display: block;
+    margin: 48px 0 0;
+  }
+}
