--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -22,6 +22,7 @@
 
 @media screen and (max-width: 320px) {
   .places {
-    margin: 64px 16px 0;
+    display: block;
+    margin: 64px 0 0;
   }
 }
