--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,5 +1,5 @@
 .footer__link {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -10,5 +10,12 @@
 }
 
 .footer__link:hover {
-  opacity: .3;
+  opacity: .8;
+}
+
+@media screen and (max-width: 320px){
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
