--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -9,4 +9,11 @@
 
 .place__paragraph + .place__paragraph {
   margin-top: 24px;
+}
+
+@media screen and (max-width: 768px){
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+  }
 }
