--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
@@ -21,5 +21,6 @@
   .place__title {
     font-size: 32px;
     line-height: 35px;
+    margin: 0 16px;
   }
 }
