--- a/blocks/cover/__figure/cover__figure.css
+++ b/blocks/cover/__figure/cover__figure.css
@@ -1,4 +1,6 @@
 .cover__figure {
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
   margin: 0;
 }
